--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
+  "semi": false,
+  "trailingComma": "all",
   "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 100
+  "printWidth": 120,
+  "endOfLine": "auto"
 }
